<resources>
    <string name="app_name">Smart Spectro</string>
    <string name="take_picture">Take picture</string>
    <string name="start_capture">Start Capture</string>
    <string name="quit">Quit Application</string>
    <string name="save_reference_button">Save reference</string>
    <string name="save_picture_button">Save sample</string>
    <string name="clear_button_text">Clear graph</string>
    <string name="validate_measure_button">Validate</string>
    <string name="calibrate_button">Capture zone</string>
</resources>
