<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.projet3a.rmycordeau_mirani.projet3a.CameraActivity">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/calibrationViewLayout"
        android:layout_width="wrap_content"
        android:layout_height="183dp"
        android:layout_alignParentTop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextureView
        android:id="@+id/texture"
        android:layout_width="wrap_content"
        android:layout_height="183dp"
        android:layout_alignParentTop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_takepicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/buttonBackground"
        android:text="@string/take_picture"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_picture_button" />

    <Button
        android:id="@+id/save_reference_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/buttonBackground"
        android:text="@string/save_reference_button"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texture" />

    <Button
        android:id="@+id/save_picture_button"
        android:layout_width="116dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@color/buttonBackground"
        android:text="@string/save_picture_button"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/clearButton"
        app:layout_constraintStart_toEndOf="@+id/save_reference_button"
        app:layout_constraintTop_toBottomOf="@+id/texture" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/intensityGraph"
        android:layout_width="match_parent"
        android:layout_height="267dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texture"
        app:layout_constraintVertical_bias="0.964" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="248dp"
        android:layout_height="93dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:translationZ="1dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/buttonBackground"
        android:text="@string/clear_button_text"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texture" />

    <Button
        android:id="@+id/validateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:background="@color/buttonBackground"
        android:text="@string/validate_measure_button"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/calibrationButton"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toEndOf="@+id/btn_takepicture"
        app:layout_constraintTop_toBottomOf="@+id/save_picture_button" />

    <SeekBar
        android:id="@+id/calibrationRight"
        android:layout_width="343dp"
        android:layout_height="30dp"
        android:layout_marginBottom="30dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/calibrationTop"
        app:layout_constraintEnd_toEndOf="parent" />

    <SeekBar
        android:id="@+id/calibrationTop"
        android:layout_width="343dp"
        android:layout_height="30dp"
        android:layout_marginBottom="30dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/calibrationLeft"
        app:layout_constraintEnd_toEndOf="parent" />

    <SeekBar
        android:id="@+id/calibrationBottom"
        android:layout_width="343dp"
        android:layout_height="30dp"
        android:layout_marginBottom="54dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <SeekBar
        android:id="@+id/calibrationLeft"
        android:layout_width="343dp"
        android:layout_height="30dp"
        android:layout_marginBottom="30dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/calibrationBottom"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/calibrationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/buttonBackground"
        android:text="@string/calibrate_button"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearButton" />

</android.support.constraint.ConstraintLayout>